2001-11-27  Erez Zadok  <ezk@a-hpux11i.fsl.cs.sunysb.edu>

	* ported to ia64-hp-hpux11.20 using HP's ANSI/C compiler.
	Couldn't use bison/flex because of 32-bit vs. 64-bit binaries
	issues.  Had to use HP's own yacc/lex.

2001-11-26  Erez Zadok  <ezk@a-hpux11i.fsl.cs.sunysb.edu>

	* */Makefile.am: don't use $(OBJECTS) directly because it is no
	longer automatically defined now that Automake has automatic
	dependency tracking (which I turn off).  Instead, hard-code
	minimal dependencies on am-utils' header files to depend on
	PROG_OBJECTS (where PROG is the program name being built).  This
	was discovered by using HP's non-GNU make program.

	* amd/nfs_start.c (checkup): cast getpagesize() return val to
	long, to avoid conflicts in division of a long by an int (on
	hpux11i, with their ANSI/C compiler).

 	* INSTALL, doc/am-utils.texi: port updates

	* minor new ports: ia64-hp-hpux11.20, i386-unknown-freebsd5.0,
	i386-unknown-freebsd4.4, i386-pc-linux-rh7.2,
	ia64-unknown-linux-rh7.1.

	* include/am_defs.h: actually declare extern definition for
	xdr_callmsg() if it doesn't already exist.

	* aux/macros/header_templates.m4: declare template for
	HAVE_EXTERN_XDR_CALLMSG.

	* configure.in: check for extern definition for xdr_callmsg()
	because hpux11 has that function but a bad <rpc/xdr.h> header file
	that doesn't define it in the right place.

	* libamu/mount_fs.c (print_nfs_args): cast ->rdev to u_long b/c
	on hpux11 its type is dev_t.

	* conf/nfs_prot/nfs_prot_hpux11.h: don't support autofs on hpux11
	yet.

2001-11-16  Erez Zadok  <ezk@fsl-gw.fsl.cs.sunysb.edu>

	* buildall (Usage): separate $cnf_flags and $extra_cnf_flags due
	to /bin/sh limitations.

	* bootstrap (cmd): turn back on --ignore-deps (this Automake may
	have problems)

	* libamu/xutil.c: remove __attribute__ format_arg statement for 
	expand_error() because this function, although taking a
	printf-like string, does not use it in a printf function; it only
	expands a non-printf amd-special syntax %m.