@@ -1,3 +1,14 @@
+2001-11-29  Ion Badulescu  <ion@guppy.limebrokerage.com>
+
+	* conf/autofs/autofs_linux.c (hash_init): determine the max number
+	of fd's at runtime, use it to dynamically scale the hash and list
+	arrays
+	(autofs_get_fh): sanity check, don't allow a pipe() fd greater
+	than autofs_max_fds
+	(autofs_release_fh): close our end of the pipe here (no clue why
+	or when it got commented out)
+	(autofs_mounted): set kernelfd to -1 after closing it
+
 2001-11-27  Erez Zadok  <ezk@a-hpux11i.fsl.cs.sunysb.edu>
 
 	* ported to ia64-hp-hpux11.20 using HP's ANSI/C compiler.
